--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,14 +6,24 @@
 
     .container {
         color: var(--offwhite);
-        margin: auto;
+        margin: 0 auto;
         padding: 40px 20px;
     }
 
     .card {
-        height: 100%;
+        /* height: 80vh; */
     }
 
+    .glass {
+        /* From https://css.glass */
+        background: rgba(255, 255, 255, 0);
+        border-radius: 0px;
+        box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+        backdrop-filter: blur(0px);
+        -webkit-backdrop-filter: blur(0px);
+        border: 0px solid rgba(255, 255, 255, 0);
+    }
+    
     .name {
         font-size: 3.8rem;
     }
