Add wand cursor (is this a mistake lol)

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: url(../files/cursor/cursor.cur), auto;
 }
 
 .prevent-select {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+}
+
+.cursor-file {
+    cursor: url(../files/cursor/cursor.cur), auto;
+}
+
+.cursor-wand-emoji {
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🪄</text></svg>") 16 0, auto;
+    /*!emojicursor.app*/
 }
