--- a/css/lumos.css
+++ b/css/lumos.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/harry-potter');
+/* @import url('https://fonts.cdnfonts.com/css/harry-potter'); */
 
 .lightbulb {
     animation: lightbulbPulse 1s ease-in-out infinite;
