--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(magic.css);
 @import url(lumos.css);
 @import url(mobile.css);
+@import url(cursor.css);
 
 body {
     background-color: rgb(20, 20, 20);
@@ -21,11 +22,11 @@ body {
     user-select: none; /* Standard syntax */
 }
 
-.cursor-file {
+/* .cursor-file {
     cursor: url(../files/cursor/cursor.cur), auto;
-}
+} */
 
-.cursor-wand-emoji {
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🪄</text></svg>") 16 0, auto;
+/* .cursor-wand-emoji { */
+    /* cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🪄</text></svg>") 16 0, auto; */
     /*!emojicursor.app*/
-}
+/* } */
