--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* cursor: url(../files/cursor/wand.png), crosshair !important; */
 }
 
 .prevent-select {
