disable fancy color blurb that follows cursor bc need to fix firefox and safari versions...

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url(blurb-background.css);
+/* @import url(blurb-background.css); */
 @import url(card.css);
 @import url(magic.css);
-@import url(lumos.css);
+/* @import url(lumos.css); */
 @import url(mobile.css);
 @import url(cursor.css);
 
