--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,14 @@
+/* Disable custom cursor and hide cursor element for screens smaller than 1024px */
+@media (max-width: 1024px) {
+    html {
+        cursor: auto;
+    }
+
+    #cursor-circular-invert {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 499px) {
     #blob,
     #blur {
@@ -23,7 +34,7 @@
         -webkit-backdrop-filter: blur(0px);
         border: 0px solid rgba(255, 255, 255, 0);
     }
-    
+
     .name {
         font-size: 3.8rem;
     }
