--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 @import url(card.css);
 @import url(magic.css);
 /* @import url(lumos.css); */
-@import url(mobile.css);
 @import url(cursor.css);
+@import url(mobile.css);
 
 body {
     background-color: rgb(20, 20, 20);
@@ -18,16 +18,19 @@ body {
 }
 
 .prevent-select {
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
+    /* Safari */
+    -webkit-user-select: none;
+    /* IE 10 and IE 11 */
+    -ms-user-select: none;
+    /* Standard syntax */
+    user-select: none;
 }
 
 /* .cursor-file {
     cursor: url(../files/cursor/cursor.cur), auto;
 } */
 
-/* .cursor-wand-emoji { */
-    /* cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🪄</text></svg>") 16 0, auto; */
-    /*!emojicursor.app*/
-/* } */
+/* .cursor-wand-emoji {
+    !emojicursor.app
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🪄</text></svg>") 16 0, auto;
+} */
